--- a/nothotdog/ios/Podfile
+++ b/nothotdog/ios/Podfile
@@ -34,6 +34,14 @@ target 'nothotdog' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
+
   target 'nothotdogTests' do
     inherit! :search_paths
     # Pods for testing
